@@ -2150,6 +2150,8 @@ nuttx-5.19 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
       i486 port.
     * arch/arm/src/stm32/stm32_spi.c -- Correct base address of SPI3 (reported by
       Uros Platise).
+    * drivers/mmcsd/mmcsd_sdio.c -- Correct a loop termination condition (also
+      reported by Uros Platise).
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
